--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "tinkteq-assessment",
+  "private": true,
   "version": "1.0.0",
   "description": "role-based access control task",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "start:dev": "nodemon index.js",
+    "start:prod": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -21,5 +24,8 @@
   "bugs": {
     "url": "https://github.com/Damilare50/tinkteq-assessment/issues"
   },
-  "homepage": "https://github.com/Damilare50/tinkteq-assessment#readme"
+  "homepage": "https://github.com/Damilare50/tinkteq-assessment#readme",
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  }
 }
