--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
     "start:prod": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "mongodb-memory-server": "^10.1.3",
+    "mongoose": "^8.9.7"
+  },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/Damilare50/tinkteq-assessment.git"
@@ -25,12 +34,5 @@
   "bugs": {
     "url": "https://github.com/Damilare50/tinkteq-assessment/issues"
   },
-  "homepage": "https://github.com/Damilare50/tinkteq-assessment#readme",
-  "devDependencies": {
-    "nodemon": "^3.1.9"
-  },
-  "dependencies": {
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2"
-  }
+  "homepage": "https://github.com/Damilare50/tinkteq-assessment#readme"
 }
