--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "nodemon": "^3.1.9"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "helmet": "^8.0.0",
     "mongodb-memory-server": "^10.1.3",
     "mongoose": "^8.9.7"
   },
