--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "helmet": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb-memory-server": "^10.1.3",
     "mongoose": "^8.9.7"
   },
